--- a/drilling.html
+++ b/drilling.html
@@ -5,34 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Свердла</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <script src="category.js" defer data-category="Свердла"></script>
 </head>
 <body>
-
     <!-- Шапка -->
     <header>
         <div class="header-container">
             <div class="logo">
-                <a href="./index.html">ЧПК Інструменти</a>
+                <a href="index.html">ЧПК Інструменти</a>
             </div>
             <nav class="navigation">
                 <ul>
-                    <li><a href="./index.html">Головна</a></li>
-                    <li><a href="./milling.html">Фрези</a></li>
-                    <li><a href="./turning.html">Токарні інструменти</a></li>
-                    <li><a href="./drilling.html">Свердла</a></li>
-                    <li><a href="./cart.html">Кошик</a></li>
+                    <li><a href="index.html">Головна</a></li>
+                    <li><a href="cart.html">Кошик</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- Секція категорії товарів -->
-    <section class="product-catalog">
+    <!-- Секція товарів категорії "Свердла" -->
+    <section class="category-section">
         <h2>Свердла</h2>
         <div class="product-list"></div>
     </section>
-
-    <script src="./category.js" data-category="Свердла"></script>
 </body>
 </html>
