--- a/login.html
+++ b/login.html
@@ -4,39 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Вхід користувача</title>
+    <title>Вхід</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="login.js" defer></script>
 </head>
 <body>
-
-    <!-- Шапка -->
-    <header>
-        <div class="header-container">
-            <div class="logo">
-                <a href="index.html">ЧПК Інструменти</a>
-            </div>
-            <nav class="navigation">
-                <ul>
-                    <li><a href="index.html">Головна</a></li>
-                    <li><a href="registration.html">Реєстрація</a></li>
-                    <li><a href="cart.html">Кошик</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <!-- Форма входу користувача -->
-    <section class="login">
-        <h2>Вхід користувача</h2>
+    <!-- Секція входу -->
+    <section class="login-section">
+        <h2>Вхід</h2>
         <form id="login-form">
-            <label for="login-username">Ім'я користувача:</label>
-            <input type="text" id="login-username" required>
-            <label for="login-password">Пароль:</label>
-            <input type="password" id="login-password" required>
+            <label for="email">Електронна пошта:</label>
+            <input type="email" id="email" required>
+
+            <label for="password">Пароль:</label>
+            <input type="password" id="password" required>
+
             <button type="submit" class="btn-primary">Увійти</button>
         </form>
     </section>
-
-    <script src="login.js"></script>
 </body>
 </html>
