--- a/registration.html
+++ b/registration.html
@@ -4,41 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Реєстрація користувача</title>
+    <title>Реєстрація</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="registration.js" defer></script>
 </head>
 <body>
-
-    <!-- Шапка -->
-    <header>
-        <div class="header-container">
-            <div class="logo">
-                <a href="index.html">ЧПК Інструменти</a>
-            </div>
-            <nav class="navigation">
-                <ul>
-                    <li><a href="index.html">Головна</a></li>
-                    <li><a href="login.html">Вхід</a></li>
-                    <li><a href="cart.html">Кошик</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <!-- Форма реєстрації користувача -->
-    <section class="registration">
-        <h2>Реєстрація користувача</h2>
+    <!-- Секція реєстрації -->
+    <section class="registration-section">
+        <h2>Реєстрація</h2>
         <form id="registration-form">
             <label for="username">Ім'я користувача:</label>
             <input type="text" id="username" required>
-            <label for="email">Email:</label>
+
+            <label for="email">Електронна пошта:</label>
             <input type="email" id="email" required>
+
             <label for="password">Пароль:</label>
             <input type="password" id="password" required>
+
             <button type="submit" class="btn-primary">Зареєструватися</button>
         </form>
     </section>
-
-    <script src="registration.js"></script>
 </body>
 </html>
