--- a/drilling.html
+++ b/drilling.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Свердла</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="category.js" defer data-category="Свердла"></script>
+    <script data-category="Свердла" src="category.js" defer></script>
 </head>
 <body>
+
     <!-- Шапка -->
     <header>
         <div class="header-container">
@@ -18,16 +19,19 @@
             <nav class="navigation">
                 <ul>
                     <li><a href="index.html">Головна</a></li>
+                    <li><a href="milling.html">Фрези</a></li>
+                    <li><a href="turning.html">Токарні інструменти</a></li>
                     <li><a href="cart.html">Кошик</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- Секція товарів категорії "Свердла" -->
-    <section class="category-section">
+    <!-- Секція категорії -->
+    <section class="product-catalog">
         <h2>Свердла</h2>
         <div class="product-list"></div>
     </section>
+
 </body>
 </html>
