--- a/login.html
+++ b/login.html
@@ -6,9 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Вхід</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="login.js" defer></script>
 </head>
 <body>
+
+    <!-- Шапка -->
+    <header>
+        <div class="header-container">
+            <div class="logo">
+                <a href="index.html">ЧПК Інструменти</a>
+            </div>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="index.html">Головна</a></li>
+                    <li><a href="registration.html">Реєстрація</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
     <!-- Секція входу -->
     <section class="login-section">
         <h2>Вхід</h2>
@@ -22,5 +37,7 @@
             <button type="submit" class="btn-primary">Увійти</button>
         </form>
     </section>
+
+    <script src="login.js"></script>
 </body>
 </html>
