--- a/registration.html
+++ b/registration.html
@@ -6,9 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Реєстрація</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="registration.js" defer></script>
 </head>
 <body>
+
+    <!-- Шапка -->
+    <header>
+        <div class="header-container">
+            <div class="logo">
+                <a href="index.html">ЧПК Інструменти</a>
+            </div>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="index.html">Головна</a></li>
+                    <li><a href="login.html">Вхід</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
     <!-- Секція реєстрації -->
     <section class="registration-section">
         <h2>Реєстрація</h2>
@@ -25,5 +40,7 @@
             <button type="submit" class="btn-primary">Зареєструватися</button>
         </form>
     </section>
+
+    <script src="registration.js"></script>
 </body>
 </html>
