--- a/product.html
+++ b/product.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Товар</title>
+    <title>Деталі товару</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="product.js" defer></script>
 </head>
 <body>
+
     <!-- Шапка -->
     <header>
         <div class="header-container">
@@ -18,6 +18,9 @@
             <nav class="navigation">
                 <ul>
                     <li><a href="index.html">Головна</a></li>
+                    <li><a href="milling.html">Фрези</a></li>
+                    <li><a href="turning.html">Токарні інструменти</a></li>
+                    <li><a href="drilling.html">Свердла</a></li>
                     <li><a href="cart.html">Кошик</a></li>
                 </ul>
             </nav>
@@ -26,9 +29,15 @@
 
     <!-- Секція товару -->
     <section class="product-details">
-        <div class="product-info" id="product-info">
-            <!-- Інформація про товар буде завантажуватися динамічно через JavaScript -->
+        <div class="product-info">
+            <img id="product-image" src="" alt="">
+            <h1 id="product-name"></h1>
+            <p id="product-description"></p>
+            <p class="price" id="product-price"></p>
+            <a href="#" id="add-to-cart" class="btn-primary">Додати в кошик</a>
         </div>
     </section>
+
+    <script src="product.js"></script>
 </body>
 </html>
