--- a/turning.html
+++ b/turning.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Токарні Інструменти</title>
+    <title>Токарні інструменти</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="category.js" defer data-category="Токарні інструменти"></script>
+    <script data-category="Токарні інструменти" src="category.js" defer></script>
 </head>
 <body>
+
     <!-- Шапка -->
     <header>
         <div class="header-container">
@@ -18,16 +19,19 @@
             <nav class="navigation">
                 <ul>
                     <li><a href="index.html">Головна</a></li>
+                    <li><a href="milling.html">Фрези</a></li>
+                    <li><a href="drilling.html">Свердла</a></li>
                     <li><a href="cart.html">Кошик</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- Секція товарів категорії "Токарні інструменти" -->
-    <section class="category-section">
+    <!-- Секція категорії -->
+    <section class="product-catalog">
         <h2>Токарні інструменти</h2>
         <div class="product-list"></div>
     </section>
+
 </body>
 </html>
