--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
         <h2>Популярні Категорії</h2>
         <div class="category-cards">
             <div class="card">
-                <img src="images/milling_tools.jpg" alt="Фрези">
+                <img src="/mnt/data/A_modern,_high-quality_image_of_CNC_milling_tools,.png" alt="Фрези">
                 <h3>Фрези</h3>
                 <p>Високоточні фрези для вашого виробництва. Різноманітність діаметрів і форм.</p>
                 <a href="milling.html" class="btn-secondary">Переглянути</a>
             </div>
             <div class="card">
-                <img src="images/turning_tools.jpg" alt="Токарні інструменти">
+                <img src="/mnt/data/A_modern,_high-quality_image_of_CNC_turning_tools,.png" alt="Токарні інструменти">
                 <h3>Токарні інструменти</h3>
                 <p>Якісні токарні інструменти для найкращих результатів обробки.</p>
                 <a href="turning.html" class="btn-secondary">Переглянути</a>
             </div>
             <div class="card">
-                <img src="images/drilling_tools.jpg" alt="Свердла">
+                <img src="/mnt/data/A_modern,_high-quality_image_of_CNC_drilling_tools.png" alt="Свердла">
                 <h3>Свердла</h3>
                 <p>Надійні свердла для будь-яких завдань. Довговічність та ефективність.</p>
                 <a href="drilling.html" class="btn-secondary">Переглянути</a>
