--- a/product.html
+++ b/product.html
@@ -18,23 +18,20 @@
             <nav class="navigation">
                 <ul>
                     <li><a href="index.html">Головна</a></li>
-                    <li><a href="milling.html">Фрези</a></li>
-                    <li><a href="turning.html">Токарні інструменти</a></li>
-                    <li><a href="drilling.html">Свердла</a></li>
                     <li><a href="cart.html">Кошик</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- Секція товару -->
-    <section class="product-details">
+    <!-- Деталі товару -->
+    <section class="product-details" id="product-details">
+        <img id="product-image" alt="Назва товару" class="product-image">
         <div class="product-info">
-            <img id="product-image" src="" alt="">
-            <h1 id="product-name"></h1>
-            <p id="product-description"></p>
-            <p class="price" id="product-price"></p>
-            <a href="#" id="add-to-cart" class="btn-primary">Додати в кошик</a>
+            <h2 id="product-title">Назва товару</h2>
+            <p id="product-price">Ціна: </p>
+            <p id="product-description">Детальний опис товару...</p>
+            <a href="#" class="btn-primary" id="add-to-cart">Додати в кошик</a>
         </div>
     </section>
 
