--- a/cart.html
+++ b/cart.html
@@ -18,23 +18,31 @@
             <nav class="navigation">
                 <ul>
                     <li><a href="index.html">Головна</a></li>
-                    <li><a href="milling.html">Фрези</a></li>
-                    <li><a href="turning.html">Токарні інструменти</a></li>
-                    <li><a href="drilling.html">Свердла</a></li>
                     <li><a href="cart.html">Кошик</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- Секція кошика -->
-    <section class="cart-section">
+    <!-- Список товарів у кошику -->
+    <section class="cart">
         <h2>Ваш кошик</h2>
-        <div class="cart-items"></div>
-        <div class="cart-total">
-            <h3>Загальна сума: <span id="total-price">0</span></h3>
-            <a href="#" class="btn-primary" id="checkout-button">Оформити замовлення</a>
-        </div>
+        <div id="cart-items"></div>
+        <div id="total-price">Загальна вартість: 0 грн</div>
+    </section>
+
+    <!-- Форма оформлення замовлення -->
+    <section class="checkout">
+        <h3>Оформлення замовлення</h3>
+        <form id="checkout-form">
+            <label for="name">Ім'я:</label>
+            <input type="text" id="name" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" required>
+            <label for="address">Адреса:</label>
+            <input type="text" id="address" required>
+            <button type="submit" class="btn-primary">Підтвердити замовлення</button>
+        </form>
     </section>
 
     <script src="cart.js"></script>
