--- a/registration.html
+++ b/registration.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Реєстрація</title>
+    <title>Реєстрація користувача</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,24 +19,22 @@
                 <ul>
                     <li><a href="index.html">Головна</a></li>
                     <li><a href="login.html">Вхід</a></li>
+                    <li><a href="cart.html">Кошик</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <!-- Секція реєстрації -->
-    <section class="registration-section">
-        <h2>Реєстрація</h2>
+    <!-- Форма реєстрації користувача -->
+    <section class="registration">
+        <h2>Реєстрація користувача</h2>
         <form id="registration-form">
             <label for="username">Ім'я користувача:</label>
             <input type="text" id="username" required>
-
-            <label for="email">Електронна пошта:</label>
+            <label for="email">Email:</label>
             <input type="email" id="email" required>
-
             <label for="password">Пароль:</label>
             <input type="password" id="password" required>
-
             <button type="submit" class="btn-primary">Зареєструватися</button>
         </form>
     </section>
